syntax = "proto3";

package proto;

option go_package = "github.com/moonicy/gometrics/proto";

message Gauge {
  string id = 1;
  double value = 2;
}

message Counter {
  string id = 1;
  int64 delta = 2;
}

message UpdateMetricsRequest {
  repeated Gauge gauges = 1;
  repeated Counter counters = 2;
}

message UpdateMetricsResponse {
  string error = 1;
}

service Metrics {
  rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponse);
}